segundo commit do mateusFelix

--- a/mateusFelix/index.html
+++ b/mateusFelix/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MateusFelix</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <p>Bem Vindos</p>
+
+    <div class="inicio">
+        <h1>Bem Vindos</h1>
+
+        <p>Bem vindo visitante. Voce está no site do aluno Mateus Felix, estudante de Engenharia de
+            Software.
+        </p>
+    </div>
+
 </body>
 
 </html>
