terceiro commit mateusFelix

--- a/mateusFelix/index.html
+++ b/mateusFelix/index.html
@@ -16,6 +16,8 @@
         <p>Bem vindo visitante. Voce está no site do aluno Mateus Felix, estudante de Engenharia de
             Software.
         </p>
+
+        <img src="images/imagem01.jpeg" title="Imagem de Praia" alt="">
     </div>
 
 </body>
