Criacao de lista

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <body>
 <!-- Conteúdo -->
 Esse é o nosso exemplo! :(
+
+<h2>Membros da equipe:</h2>
+<ul>
+	<li>Matheus Gadêlha</li>
+	<li>Mateus Felix</li>
+	<li>Vinicios Sales</li>
+</ul>
 </body>
 </html>
 
