--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Esse é o nosso exemplo! :(
 
 <h2>Membros da equipe:</h2>
 <ul>
-	<li>Matheus Gadêlha</li>
-	<li>Mateus Felix</li>
-	<li>Vinicios Sales</li>
+	<li>Matheus Gadêlha - 499103</li>
+	<li>Mateus Felix - 499053</li>
+	<li>Vinicios Sales - 499641</li>
 </ul>
 </body>
 </html>
