--- a/index2.html
+++ b/index2.html
@@ -7,5 +7,8 @@
 <body>
 <!-- Conteúdo -->
 Esse é o nosso exemplo! ;D
+
+<h2>Link para o repositório:</h2>
+<a href="https://github.com/niciuoss/Gerencia2020.2">Gerencia</a>
 </body>
 </html>
