--- a/index2.html
+++ b/index2.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UFT-8"/>
-<title>Disciplina de GC</title>
-</head>
-<body>
-<!-- Conteúdo -->
-Esse é o nosso exemplo! ;D
 
-<h2>Link para o repositório:</h2>
-<a href="https://github.com/niciuoss/Gerencia2020.2">Gerencia</a>
+<head>
+    <meta charset="UFT-8" />
+    <title>Disciplina de GC</title>
+</head>
+
+<body>
+    <!-- Conteúdo -->
+    Esse é o nosso exemplo! ;D
+
+    <h2>Link para o repositório:</h2>
+    <a href="https://github.com/niciuoss/Gerencia2020.2">Gerencia</a>
+
+    <h2>Membros da equipe:</h2>
+    <ul>
+        <li>Matheus Gadêlha - 499103</li>
+        <li>Mateus Felix - 499053</li>
+        <li>Vinicios Sales - 499641</li>
+    </ul>
 </body>
+
 </html>
