alteracao no estilo da fonte da tag h2

--- a/pratica02.html
+++ b/pratica02.html
@@ -12,12 +12,16 @@
 			.pratica2 h1{
 				color: #FFFFFF; 
 			}
+
+			h2{
+				font-family: arial;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="pratica2">
 			<h1>Pratica 02</h1><br>
-			<h2>Faça nessa página, a sua alteração</h2><br>
+			<h2>Teste de fonte</h2><br>
 		</div>
 	</body>
 </html>
