--- a/pratica02.html
+++ b/pratica02.html
@@ -21,7 +21,7 @@
 	<body>
 		<div class="pratica2">
 			<h1>Pratica 02</h1><br>
-			<h2>Teste de fonte</h2><br>
+			<h2>Vinicius</h2><br>
 		</div>
 	</body>
 </html>
