inserindo o nome Mateus Felix na linha 27

--- a/pratica02.html
+++ b/pratica02.html
@@ -1,27 +1,31 @@
 <html>
-	<head>
-		<meta charset="utf-8">
-		<style type="text/css">
-			.pratica2{
-			margin: 10px auto;
-			padding: 20px;
-			background: #FF0000;
-			border-radius: 8px;
-			font-family: Georgia, "Times New Roman", Times, serif;
-		}
-			.pratica2 h1{
-				color: #FFFFFF; 
-			}
 
-			h2{
-				font-family: arial;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="pratica2">
-			<h1>Pratica 02</h1><br>
-			<h2>Vinicius</h2><br>
-		</div>
-	</body>
+<head>
+    <meta charset="utf-8">
+    <style type="text/css">
+        .pratica2 {
+            margin: 10px auto;
+            padding: 20px;
+            background: #FF0000;
+            border-radius: 8px;
+            font-family: Georgia, "Times New Roman", Times, serif;
+        }
+        
+        .pratica2 h1 {
+            color: #FFFFFF;
+        }
+        
+        h2 {
+            font-family: arial;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="pratica2">
+        <h1>Pratica 02</h1><br>
+        <h2>Vinicius, Mateus Felix</h2><br>
+    </div>
+</body>
+
 </html>
